test_suite/alan-2022-examples/failing/008570_mutation.alan
source M4 function O(begin hl5Ja) begin relax end begin relax end
